--- a/_posts/0000-01-02-Dranezav.md
+++ b/_posts/0000-01-02-Dranezav.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ----
-Your text
+Something new... but for real, you didn't specify how to edit the file...
 Use the left arrow to go back!
